# obs-decklink-output-filter

./: .gitignore  CMakeLists.txt  build.bat  buildspec.json  installobs.bat
data/locale/: en-US.ini
src/: plugin-main.c
